--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -6,12 +6,13 @@ $container-width: calc($content-width + ($container-offset * 2));
 
 // = colors
 $white: #fff;
-$light:#F5F5F6;
+$light: #f5f5f6;
+$cararra: #ebeae8;
 $black: #000;
-$gray:#1F1F1F;
+$gray: #1f1f1f;
 
-$hold:#717271;
-$list-title:#FFD1A0;
-$siena:#EC6566;
-$accent: #FF4053;
-$heliotrope:#B15FFF;
+$hold: #717271;
+$list-title: #ffd1a0;
+$siena: #ec6566;
+$accent: #ff4053;
+$heliotrope: #b15fff;
