--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,8 @@
 @import 'settings';
 
 //particles
-@import "header";
-@import "hero";
+@import 'header';
+@import 'hero';
+@import 'slider';
+@import 'description';
 @import 'footer';
