--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -185,7 +185,7 @@ p {
   justify-content: center;
   align-items: center;
   padding: 8px 0;
-  background-color: #EC6566;
+  background-color: #ec6566;
   margin-bottom: 24px;
 }
 .header__up_text {
@@ -218,6 +218,7 @@ p {
 .hero {
   background-color: #000;
   padding: 32px 0;
+  margin-bottom: 25px;
 }
 .hero__container {
   display: flex;
@@ -326,4 +327,84 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.mySwiper {
+  margin: 10px 0 12px;
+}
+
+.swiper-horizontal > .swiper-scrollbar,
+.swiper-scrollbar.swiper-scrollbar-horizontal {
+  position: absolute;
+  left: var(--swiper-scrollbar-sides-offset, 1%);
+  bottom: var(--swiper-scrollbar-bottom, 4px);
+  top: var(--swiper-scrollbar-top, auto);
+  z-index: 50;
+  height: var(--swiper-scrollbar-size, 8px);
+  width: calc(100% - 2 * var(--swiper-scrollbar-sides-offset, 1%));
+}
+
+.description__title {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 112%;
+  color: #1f1f1f;
+  margin-bottom: 20px;
+}
+.description__scrollbar {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.description__scrollbar_text {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  color: #ff4053;
+  margin-bottom: 6px;
+}
+.description__scrollbar_line {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 8px;
+  border-radius: 10px;
+  background-color: #ebeae8;
+}
+.description__scrollbar_line::after {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 110px;
+  height: 8px;
+  top: 0;
+  left: 0;
+  background-color: #ff4053;
+  border-radius: 10px;
+}
+.description__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 125%;
+  color: #1f1f1f;
+  margin-bottom: 20px;
+}
+.description__count {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  width: 100%;
+  height: 40px;
+  background: #f5f5f6;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #000;
+}
+.description__count_timer {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150%;
+  color: #b15fff;
+  margin-left: 6px;
 }
