--- a/src/partials/_description.html
+++ b/src/partials/_description.html
@@ -12,4 +12,17 @@
     Feel the incredible immersion of haptic feedback and adaptive triggers in supported games
   </p>
   <div class="description__count">sale ends in <span class="description__count_timer">17:34:53</span></div>
+  <div class="description__price price">
+    <span class="price__today">£199</span>
+    <span class="price__yesterday">£1099</span>
+  </div>
+  <div class="description__offer">
+    <p class="description__offer_text">Special offer only for split payments by</p>
+    <p class="description__offer_text">
+      <span><img src="./img/afterpay-logo.svg" alt="afterpay" /></span>
+      with 10 interest-free installments
+    </p>
+  </div>
+  <button class="description__btn btn-reset">Buy now pay later</button>
+  <p class="description__ship">In stock, ready for ship Delivery in 2-4 days in UK</p>
 </section>
