--- a/src/scss/_description.scss
+++ b/src/scss/_description.scss
@@ -61,6 +61,7 @@
     font-size: 16px;
     line-height: 150%;
     color: $black;
+    margin-bottom: 12px;
 
     &_timer {
       font-weight: 600;
@@ -69,5 +70,80 @@
       color: $heliotrope;
       margin-left: 6px;
     }
+  }
+
+  &__price {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 0;
+    height: 64px;
+    color: $gray;
+    margin-bottom: 20px;
+
+    .price__today {
+      font-weight: 600;
+      font-size: 32px;
+      line-height: 125%;
+    }
+
+    .price__yesterday {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+
+      &::after {
+        width: 35px;
+        height: 8px;
+      }
+
+      &::before {
+        position: absolute;
+        content: '-75%';
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        color: $accent;
+        right: -43px;
+      }
+    }
+  }
+
+  &__offer {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 129%;
+    text-align: center;
+    color: $black;
+
+    &_text {
+      margin-bottom: 12px;
+    }
+  }
+
+  &__btn {
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+    color: $black;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 345px;
+    height: 52px;
+    background: $aero;
+    margin-bottom: 8px;
+  }
+
+  &__ship {
+    max-width: 200px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 143%;
+    color: $hold;
+    margin-bottom: 35px;
   }
 }
