--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -8,6 +8,7 @@ $container-width: calc($content-width + ($container-offset * 2));
 $white: #fff;
 $light: #f5f5f6;
 $cararra: #ebeae8;
+$aero: #b0fde4;
 $black: #000;
 $gray: #1f1f1f;
 
