--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -8,4 +8,18 @@
       <img src="./img/menu.svg" alt="menu" class="header__burger">
     </div>
   </div>
+  <!-- Burger-menu -->
+  <div class="header__menu menu">
+    <div class="menu__head">
+      <img src="./img/logo-big-black.svg" alt="logo" class="menu__head_img">
+      <img src="./img/menu-close.svg" alt="close" class="menu__head_close">
+    </div>
+    <nav class="menu__list">
+      <a href="" class="menu__link">Go to product page</a>
+      <a href="" class="menu__link">Track your order</a>
+      <a href="" class="menu__link">Contact us</a>
+      <a href="" class="menu__link">FAQ</a>
+    </nav>
+    <span class="menu__line"></span>
+  </div>
 </header>
