--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -178,6 +178,7 @@ p {
 }
 
 .header {
+  position: relative;
   background-color: #000;
 }
 .header__up {
@@ -213,6 +214,52 @@ p {
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
+}
+
+.menu {
+  display: none;
+  transition: 0.3s ease-in-out;
+  position: absolute;
+  z-index: 5;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+.menu__head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 18px 12px;
+}
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  padding: 24px 24px 0 24px;
+  background-color: #fff;
+}
+.menu__link {
+  position: relative;
+  font-weight: 500;
+  color: #000;
+  margin-bottom: 24px;
+}
+.menu__link::after {
+  position: absolute;
+  content: "";
+  width: 24px;
+  height: 24px;
+  right: 0;
+  background-image: url(../img/arrow-right.svg);
+}
+.menu__line {
+  display: inline-block;
+  position: relative;
+  height: 1px;
+  width: 110%;
+  left: -15px;
+  background-color: #c1c1c1;
 }
 
 .hero {
