--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -12,7 +12,8 @@ $silver: #c1c1c1;
 $aero: #b0fde4;
 $black: #000;
 $gray: #1f1f1f;
-
+$cod: #1c1c1c;
+$dove: #6b6b6b;
 $hold: #717271;
 $list-title: #ffd1a0;
 $siena: #ec6566;
