--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,2 +1,35 @@
 .footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 16px 24px;
+  background-color: $cod;
+
+  &__title {
+    font-weight: 400;
+    font-size: 8px;
+    text-align: center;
+    color: $silver;
+  }
+
+  &__description {
+    font-weight: 400;
+    font-size: 8px;
+    text-align: center;
+    color: $silver;
+    margin-bottom: 8px;
+  }
+
+  &__btn {
+    display: block;
+    font-weight: 400;
+    font-size: 8px;
+    border-radius: 100px;
+    padding: 6px 18px;
+    width: 74px;
+    height: 24px;
+    background-color: $silver;
+    color: $black;
+  }
 }
