--- a/src/partials/_hero.html
+++ b/src/partials/_hero.html
@@ -23,6 +23,27 @@
       <span class="price__yesterday">£1099</span>
     </div>
     <img src="./img/macbook.png" alt="macbook" class="hero__img" />
-    <div class="hero__trust trust"></div>
+    <div class="hero__trust trust">
+      <div class="trust__item">
+        <img src="./img/union.svg" alt="union">
+      </div>
+      <div class="trust__item">
+        <div class="trust__item_up">
+          <img src="./img/ratings.svg" alt="rating">
+        </div>
+        <div class="trust__item_down">
+          Over&nbsp;<span>10,000&nbsp;reviews</span>&nbsp;on
+          <img src="./img/trustpilot.svg" alt="trustpilot">
+        </div>
+      </div>
+      <div class="trust__item">
+        <div class="trust__item_text">
+          <span>4.9</span>&nbsp;out&nbsp;of&nbsp;<span>5</span>
+        </div>
+        <div class="trust__item_text">
+          <span>Exelent</span>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
