--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -45,7 +45,7 @@
 .menu {
   display: none;
   transition: 0.3s ease-in-out;
-  position: absolute;
+  position: fixed;
   z-index: 5;
   width: 100%;
   height: 100vh;
