--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -9,6 +9,7 @@ $white: #fff;
 $light: #f5f5f6;
 $cararra: #ebeae8;
 $silver: #c1c1c1;
+$alto: #d5d5d5;
 $aero: #b0fde4;
 $black: #000;
 $gray: #1f1f1f;
