--- a/src/partials/_description.html
+++ b/src/partials/_description.html
@@ -23,6 +23,41 @@
       with 10 interest-free installments
     </p>
   </div>
-  <button class="description__btn btn-reset">Buy now pay later</button>
+  <button id="myBtn" class="description__btn btn-reset">Buy now pay later</button>
   <p class="description__ship">In stock, ready for ship Delivery in 2-4 days in UK</p>
+
+  <!-- Modal -->
+  <div class="modal">
+
+    <div class="modal__content">
+      <div class="modal__header">
+        <img src="./img/afterpay-logo.svg" alt="logo" class="modal__logo">
+        <img src="./img/menu-close.svg" alt="close" class="modal__close">
+      </div>
+      <h2 class="modal__title">Make easy monthly payments</h2>
+      <div class="modal__body">
+        <div class="modal__body_up">
+          <div class="modal__body_price">£9.99/mo.</div>
+          <div class="modal__body_badge">10 months</div>
+        </div>
+        <div class="modal__items">
+          <div class="modal__item">
+            <h3 class="modal__item_title">APR</h3>
+            <p class="modal__item_text">0%</p>
+          </div>
+          <div class="modal__item">
+            <h3 class="modal__item_title">Interest</h3>
+            <p class="modal__item_text">£0</p>
+          </div>
+          <div class="modal__item">
+            <h3 class="modal__item_title">Total</h3>
+            <p class="modal__item_text">£89.00</p>
+          </div>
+        </div>
+      </div>
+      <span class="modal__line"></span>
+      <button class="modal__confirm btn-reset">Confirm to checkout</button>
+    </div>
+
+  </div>
 </section>
