--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -14,6 +14,7 @@ $aero: #b0fde4;
 $black: #000;
 $gray: #1f1f1f;
 $cod: #1c1c1c;
+$emperor: #545454;
 $dove: #6b6b6b;
 $hold: #717271;
 $list-title: #ffd1a0;
