--- a/src/scss/_description.scss
+++ b/src/scss/_description.scss
@@ -147,3 +147,140 @@
     margin-bottom: 35px;
   }
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+
+  &__logo {
+    width: 100px;
+    height: 18px;
+  }
+
+  &__close {
+    cursor: pointer;
+  }
+
+  &__content {
+    position: relative;
+    font-family: Montserrat;
+    border: 2px solid #b0fde4;
+    border-radius: 12px;
+    padding: 20px 16px 16px;
+    margin: 0 5px;
+    max-width: 400px;
+    background-color: $white;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+
+  &__title {
+    font-weight: 700;
+    font-size: 18px;
+    color: $black;
+    margin-bottom: 16px;
+  }
+
+  &__body {
+    border-radius: 10px;
+    max-width: 368px;
+    height: 103px;
+    padding: 10px;
+    margin-bottom: 16px;
+    background: $light;
+
+    &_up {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 16px;
+    }
+
+    &_price {
+      font-weight: 700;
+      font-size: 14px;
+      color: $black;
+    }
+
+    &_badge {
+      font-weight: 700;
+      font-size: 14px;
+      color: $black;
+      border-radius: 30px;
+      padding: 6px 14px;
+      width: 104px;
+      height: 29px;
+      background: $aero;
+    }
+  }
+
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    font-size: 14px;
+    color: $emperor;
+
+    &_title {
+      font-weight: 700;
+      margin-bottom: 4px;
+    }
+
+    &_text {
+      font-weight: 400;
+    }
+  }
+
+  &__line {
+    display: block;
+    border: 1px dashed $black;
+    max-width: 368px;
+    height: 0;
+    margin-bottom: 16px;
+  }
+
+  &__confirm {
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 20px;
+    color: $black;
+    border-radius: 10px;
+    padding: 12px 14px;
+    width: 100%;
+    max-width: 368px;
+    height: 48px;
+    background: $aero;
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
